<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home_nav"/>

        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/baseline_settings_suggest_24"
            android:title="@string/settings_nav"/>

        <item
            android:id="@+id/navigation_share"
            android:icon="@drawable/baseline_share_24"
            android:title="@string/share_nav"/>

        <item
            android:id="@+id/navigation_info"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/info_nav"/>
    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/navigation_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout_nav"/>
        </menu>
    </item>

</menu>